--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
     </head>
 
     <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
           <a class="navbar-brand" href="/">{{ title }}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                <a class="nav-link" href="https://utahtech.edu">Utah Tech</a>
+                <a class="nav-link" href="https://utahtech.edu">Utah Teh</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link 2</a>
@@ -35,7 +36,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> -->
 
       <div class="jumbotron">
         <div class="container">
