--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,16 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    {% if games %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='games/css/plinko.css') }}"
+      type="text/css"
+    />
+    <script src="{{url_for('static', filename='games/js/plinko.js') }}" defer></script>
+    {% endif %}
   </head>
 
   <body>
