--- a/templates/register.html
+++ b/templates/register.html
@@ -30,8 +30,8 @@
             <p class="signup" style="margin-top: 10px;">Already have an account?
                 <a rel="noopener noreferrer" href="#" class="" id="login_link" >Login here!</a>
             </p>
-            <!-- <input class="btn btn-success" type="submit" name="type" value="Create"> -->
-            <!-- <input class="btn btn-danger" type="submit" name="type" value="Delete"> -->
+            <input class="btn btn-success" type="submit" name="type" value="Create"> -->
+            <input class="btn btn-danger" type="submit" name="type" value="Delete"> -->
           </div>
         </fieldset>
       </form>
