--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,8 @@
             <p class="signup" style="margin-top: 10px;">Don't have an account?
               <a rel="noopener noreferrer" href="{{ url_for('login.register') }}" class="">Sign up</a>
            </p>
-             <input class="btn btn-success" type="submit" name="type" value="Create"> 
-             <input class="btn btn-danger" type="submit" name="type" value="Delete"> 
+             <!-- <input class="btn btn-success" type="submit" name="type" value="Create"> -->
+             <!-- <input class="btn btn-danger" type="submit" name="type" value="Delete"> -->
           </div>
         </fieldset>
       </form>
