added basic links to the nav bar, functionallity will be reworked when implementation for pages is added

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
         <a class="navbar-brand" href="/">{{ title }}</a>
+        <a class="navbar-brand" href="/gambling">plinko</a>
+        <a class="navbar-brand" href="/posts">posts</a>
+        <a class="navbar-brand" href="/friends">messages</a>
+        <a class="navbar-brand" href="/profile">profile</a>
+
         <button
           class="navbar-toggler"
           type="button"
