--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
           <div class="form-group">
             <input class="btn btn-primary" type="submit" name="type" value="Login">
             <p class="signup" style="margin-top: 10px;">Don't have an account?
-              <a rel="noopener noreferrer" href="#" class="">Sign up</a>
+              <a rel="noopener noreferrer" href="./register.html" class="">Sign up</a>
            </p>
             <!-- <input class="btn btn-success" type="submit" name="type" value="Create"> -->
             <!-- <input class="btn btn-danger" type="submit" name="type" value="Delete"> -->
