--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
     <body>
       
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
           <a class="navbar-brand" href="/">{{ title }}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="https://utahtech.edu">Utah Teh</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="https://nasa.com">NASA</a>
               </li>
             </ul>
             <ul class="navbar-nav pull-right">
@@ -36,7 +36,7 @@
             </ul>
           </div>
         </div>
-      </nav> -->
+      </nav>
 
       <div class="jumbotron">
         <div class="container">
