--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,11 @@
     </head>
 
     <body>
+
+
+
       
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
           <a class="navbar-brand" href="/">{{ title }}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,11 +35,14 @@
               <form method="post" action="/logout">
                 <button type="submit" class="form-control btn btn-secondary" name="logout">Logout</button>
               </form>
+              <form method="post" action="/delete">
+                <input class="btn btn-danger" type="submit" name="type" value="Delete"> This is just here temporarily.
+              </form>
               {% endif %}
             </ul>
           </div>
         </div>
-      </nav> -->
+      </nav>
 
       <div class="jumbotron">
         <div class="container">
