--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
   <div class="col-sm-6 mx-auto">
     <div class="card card-body bg-light">
       
-      <form method="post" action="/login">
+      <form method="post" action="{{ url_for('login.registeruser') }}">
         <fieldset>
           <legend style="display: flex; justify-content: center;font-size: 32px;">Sign Up</legend>
           <hr />
