--- a/templates/feed.html
+++ b/templates/feed.html
@@ -27,6 +27,13 @@
         <h4 class="card-title">{{ post.user }}</h4>
         <h6 class="card-subtitle mb-2 text-muted">{{ post.time|convert_time }}</h6>
         <p class="card-text">{{ post.text }}</p>
+        {% if post.user == username %}
+        <form action="/postdelete" method="post">
+          <input type="hidden" name="_method" value ="DELETE">
+          <input type="hidden" name="post_id" value="{{ post.id }}">
+          <button type="submit" class="delete-post-btn">Delete</button>
+        </form>
+        {% endif %}
       </div>
     </div>
     {% endfor %}
